Remove hero image from version control and add to .gitignore and others

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -112,7 +112,10 @@
         </p>
   
         <p class="areas-highlight">
-          Esztergom, Dorog, Zsámbék, Solymár, Pilisvörösvár és a Pilis térsége
+          Esztergom, Pilisvörösvár, Solymár, Zsámbék, Dorog, Telki,
+          Pilisszentiván, Csobánka, Csolnok, Kesztölc, Leányvár,
+          Tokod, Perbál, Piliscsév, Pilisszántó, Dág, Tök,
+          Pilisjászfalu, Úny
         </p>
   
       </div>
