--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,7 +12,7 @@
           {{ end }}
           <ul class="footer-menu">
             <li><a href="/">Főoldal</a></li>
-            <li><a href="/contact/">Kapcsolat</a></li>
+            <li><a href="/kapcsolat/">Kapcsolat</a></li>
             <li class="copyright">© {{ now.Year }} Pilis környéki szolgáltatások</li>
             <li class="copyright">
               Készítette: <a href="https://www.egyszeruweblap.hu">Egyszerű Weblap</a>
