--- a/layouts/sections/szolgaltatasok.html
+++ b/layouts/sections/szolgaltatasok.html
@@ -9,7 +9,7 @@
       Kültéri és beltéri munkák – megbízható kivitelezés, korrekt árakon
     </p>
 
-    <a href="/contact/" class="btn-hero">
+    <a href="/kapcsolat/" class="btn-hero">
       Ajánlatot kérek
     </a>
 
