--- a/layouts/szolgaltatasok/list.html
+++ b/layouts/szolgaltatasok/list.html
@@ -10,7 +10,7 @@
       Kültéri és beltéri munkák – megbízható kivitelezés, korrekt árakon
     </p>
 
-    <a href="/contact/" class="btn-hero">
+    <a href="/kapcsolat/" class="btn-hero">
       Ajánlatot kérek
     </a>
   </div>
@@ -76,7 +76,7 @@
     <p>
       Írjon vagy hívjon, rövid határidővel válaszolok – kötelezettség nélkül.
     </p>
-    <a href="/contact/" class="btn-cta">
+    <a href="/kapcsolat/" class="btn-cta">
       Ajánlatot kérek
     </a>
   </div>
