Contact page scss

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -32,5 +32,8 @@
 // Layouts
 @import "layout/hero";
 @import "layout/home";
+
+// Pages
+@import "pages/contact";
  
 @import "components/service";
