--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.Language.Lang }}">
+<html lang="hu">
 
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="{{ .Description | default .Site.Params.description }}">
+    <meta name="description" content="Kültéri és beltéri kivitelezési munkák Piliscsabán és környékén. Kertrendezés, bontás, támfal építés, kőburkolás – megbízható kivitelezés, korrekt árakon.">
 
-  
-    <title>
-      {{ block "title" . }}
-        {{ .Title }} - {{ .Site.Title }}
-      {{ end }}
-    </title>
+    <title>Kültéri és beltéri kivitelezés Piliscsabán | Pilis környéki szolgáltatások</title>
   
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
