--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
     </h1>
 
     <p class="hero-subtitle">
-      Kültéri és beltéri munkák – megbízható kivitelezés Piliscsabán és környékén
+      Kültéri és beltéri munkák – megbízható kivitelezés
     </p>
 
     <a href="/szolgaltatasok/" class="btn-hero">
@@ -30,8 +30,7 @@
       </p>
 
       <p>
-        Ha megbízható, korrekt árú kivitelezőt keres Piliscsaba
-        környékén, akkor figyelmébe ajánlom a szolgáltatásaimat.
+        Ha megbízható, korrekt árú kivitelezőt keres, akkor figyelmébe ajánlom a szolgáltatásaimat.
       </p>
     </div>
   </div>
@@ -41,7 +40,7 @@
     <div class="container">
       <header class="section-header text-center">
         <h2>Szolgáltatásaim</h2>
-        <p>Kiemelt munkák Piliscsabán és környékén</p>
+        <p>a legfontosabbak</p>
       </header>
   
       <div class="services-grid">
@@ -61,25 +60,25 @@
   <section class="usp">
     <div class="container">
       <header class="section-head text-center">
-        <h2>Miért engem válassz?</h2>
+        <h2>Miért érdemes engem válassztani?</h2>
       </header>
       <div class="usp-grid">
         <div class="usp-item">
           <i class="fa-solid fa-check"></i>
           <h3>Megbízható kivitelezés</h3>
-          <p>Mintha magamnak csinálnám.</p>
+          <p>Minőség - mintha magamnak csinálnám.</p>
         </div>
   
         <div class="usp-item">
             <i class="fa-solid fa-handshake"></i>
             <h3>Korrekt árak</h3>
-            <p>Rejtett költségek nélkül, átlátható ajánlat.</p>
+            <p>Rejtett költségek nélkül - átlátható ajánlat.</p>
         </div>
   
         <div class="usp-item">
           <i class="fa-solid fa-phone"></i>
           <h3>Elérhető vagyok</h3>
-          <p>Emailekre egy napon belül válaszolok.</p>
+          <p>Telefont felveszem, emailekre válaszolok - munkaidőben.</p>
         </div>
       </div>
     </div>
@@ -108,7 +107,7 @@
   
         <p>
           Szolgáltatásaim elsősorban <strong>Piliscsabán</strong> érhetők el,
-          valamint a környező településeken.
+          valamint a környező településeken:
         </p>
   
         <p class="areas-highlight">
