--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,12 +8,36 @@
       </nav>
 
       <div class="footer-meta">
-        <span>© {{ now.Year }} Pilis környéki szolgáltatások</span>
-        <span>Piliscsaba és környéke</span>
+        <span class="footer-copy">
+          © {{ now.Year }} Pilis környéki szolgáltatások
+        </span>
+
+        <span class="footer-area">
+          Piliscsaba és környéke
+        </span>
+
+        <div class="footer-contact">
+          <a href="tel:+36709539785" class="footer-link">
+            <i class="fa-solid fa-phone"></i>
+            +36 70 9539 785
+          </a>
+
+          <a href="mailto:zoltankassai8@google.com" class="footer-link">
+            <i class="fa-solid fa-envelope"></i>
+            zoltankassai8 [kukac] gmail [pont] com
+          </a>
+        </div>
       </div>
 
       <div class="footer-credit">
-        Készítette: <a href="https://www.egyszeruweblap.hu" target="_blank" rel="noopener">Egyszerű Weblap</a>
+        Készítette:
+        <a
+          href="https://www.mukodoweblap.hu"
+          target="_blank"
+          rel="noopener"
+        >
+          Működő Weblap – kisvállalkozásoknak
+        </a>
       </div>
 
     </div>
