--- a/layouts/szolgaltatasok/list.html
+++ b/layouts/szolgaltatasok/list.html
@@ -16,10 +16,6 @@
   </div>
 </section>
 
-<h2 class="sr-only">
-  Kültéri és beltéri szolgáltatások a Pilis környékén
-</h2>
-
 <!-- SZOLGÁLTATÁS KÁRTYÁK -->
 <section class="services-list">
   <div class="container pb-6">
@@ -55,8 +51,13 @@
       </p>
 
       <p>
-        Legyen szó kertrendezésről, bontásról, betonozásról
-        vagy burkolásról, a cél mindig ugyanaz:
+        Legyen szó
+        <a href="/szolgaltatasok/kulteri-munkak/bontasi-munkak/">bontásról</a>, 
+        <a href="/szolgaltatasok/belteri-munkak/szalagparketta-lerakas/">szalagparketta lerakásról</a>, 
+        <a href="/szolgaltatasok/belteri-munkak/falfuras-karnis-polc-kepek/">falfúrásról, karnisok, polcok, képek rögzítéséről</a>, 
+        <a href="/szolgaltatasok/kulteri-munkak/kertrendezes/">kertrendezésről</a>, 
+        <a href="/szolgaltatasok/kulteri-munkak/tamfal-epites/">támfal építésről</a>,
+        vagy <a href="/szolgaltatasok/kulteri-munkak/koburkolas/">kő-burkolásról</a> a cél mindig ugyanaz:
         <strong>tartós, átgondolt és korrekt munka</strong>.
       </p>
 
