--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,59 +1,58 @@
 <!DOCTYPE html>
 <html lang="hu">
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="Kültéri és beltéri kivitelezési munkák Piliscsabán és környékén. Kertrendezés, bontás, támfal építés, kőburkolás – megbízható kivitelezés, korrekt árakon.">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Kültéri és beltéri kivitelezés Piliscsabán | Pilis környéki szolgáltatások</title>
-  
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-    {{ block "meta_tags" . }}{{ end }}
-  
-    <link rel="icon" href="{{ .Site.BaseURL }}favicon.png">
-  
-    {{ if hugo.IsServer }}
-      {{ $style := resources.Get "scss/style.scss" | toCSS (dict "targetPath" "css/style.css" "enableSourceMap" true) }}
-      <link rel="stylesheet" href="{{ $style.RelPermalink }}">
-    {{ else }}
-      {{ $style := resources.Get "scss/style.scss" | toCSS (dict "targetPath" "css/style.css" "enableSourceMap" false) }}
-      <link rel="stylesheet" href="{{ ($style | minify | fingerprint).RelPermalink }}">
-    {{ end }}
-  
-    <!-- FONT AWESOME -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    >
-  
-    {{ block "header_css" . }}{{ end }}
-  </head>
-  
+  <meta name="description"
+    content="Kültéri és beltéri kivitelezési munkák Piliscsabán és környékén. Kertrendezés, bontás, támfal építés, kőburkolás – megbízható kivitelezés, korrekt árakon.">
 
-<body class='page {{ block "body_classes" . }}{{ end }}'>
+  <title>Kültéri és beltéri kivitelezés Piliscsabán | Pilis környéki szolgáltatások</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  {{ block "meta_tags" . }}{{ end }}
+
+  <link rel="icon" href="{{ .Site.BaseURL }}favicon.png">
+
+  {{ if hugo.IsServer }}
+    {{ $style := resources.Get "scss/style.scss" | toCSS (dict "targetPath" "css/style.css" "enableSourceMap" true) }}
+    <link rel="stylesheet" href="{{ $style.RelPermalink }}">
+  {{ else }}
+    {{ $style := resources.Get "scss/style.scss" | toCSS (dict "targetPath" "css/style.css" "enableSourceMap" false) }}
+    <link rel="stylesheet" href="{{ ($style | minify | fingerprint).RelPermalink }}">
+  {{ end }}
+
+  <!-- FONT AWESOME -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  >
+
+  {{ block "header_css" . }}{{ end }}
+</head>
+
+<body class="page {{ block "body_classes" . }}{{ end }}">
+
   {{ partial "main-menu-mobile.html" . }}
 
   <div id="wrapper" class="wrapper">
 
-    <div class="site-logo">
-      <a href="/">Pilis<span>Szolg</span></a>
-    </div>
-
     {{ partial "header.html" . }}
+
     {{ block "main" . }}
     {{ end }}
+
   </div>
 
   {{ partial "footer.html" . }}
 
   {{ $scripts := resources.Get "js/scripts.js" }}
 
-  {{ block "footer_js" . }}
-  {{ end }}
+  {{ block "footer_js" . }}{{ end }}
 
   {{ if hugo.IsServer }}
     <script type="text/javascript" src="{{ $scripts.RelPermalink }}"></script>
