--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,9 +6,9 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
   <meta name="description"
-    content="Kültéri és beltéri kivitelezési munkák Piliscsabán és környékén. Kertrendezés, bontás, támfal építés, kőburkolás – megbízható kivitelezés, korrekt árakon.">
+  content="{{ block "description" . }}{{ .Site.Params.description }}{{ end }}">
 
-  <title>Kültéri és beltéri kivitelezés Piliscsabán | Pilis környéki szolgáltatások</title>
+  <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
