--- a/layouts/partials/service-jsonld.html
+++ b/layouts/partials/service-jsonld.html
@@ -1,4 +1,3 @@
-{{- $site := .Site -}}
 {{- $page := . -}}
 
 <script type="application/ld+json">
@@ -7,14 +6,6 @@
   "@type": "Service",
   "name": "{{ $page.Title }}",
   "url": "{{ $page.Permalink }}",
-  "description": "{{ with $page.Params.summary }}{{ . }}{{ else }}{{ $page.Summary | plainify }}{{ end }}",
-  "provider": {
-    "@type": "LocalBusiness",
-    "name": "{{ $site.Title }}",
-    "areaServed": {
-      "@type": "AdministrativeArea",
-      "name": "Piliscsaba és környéke"
-    }
-  }
+  "description": "{{ with $page.Params.summary }}{{ . }}{{ else }}{{ $page.Summary | plainify }}{{ end }}"
 }
 </script>
