--- a/layouts/szolgaltatasok/list.html
+++ b/layouts/szolgaltatasok/list.html
@@ -1,3 +1,11 @@
+{{ define "title" }}
+Szolgáltatások Piliscsabán és környékén | PilisSzolg
+{{ end }}
+
+{{ define "description" }}
+Kültéri és beltéri szolgáltatások Piliscsabán: kertrendezés, bontás, betonozás, burkolás. Megbízható kivitelezés, korrekt árakon.
+{{ end }}
+
 {{ define "main" }}
 
 <section class="hero hero-services">
