--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
-<section class="hero hero-home">
-  <div class="container hero-inner text-center">
+<section class="hero hero-services">
+  <div class="hero-inner text-center">
 
     <h1 class="hero-title">
       Piliscsaba környéki szolgáltatások
