--- a/layouts/szolgaltatasok/single.html
+++ b/layouts/szolgaltatasok/single.html
@@ -1,16 +1,20 @@
 {{ define "main" }}
 
-<section class="hero hero-service">
+<section class="hero hero-services">
   <div class="hero-inner text-center">
-    <h1>{{ .Title }}</h1>
 
-    {{ with .Params.subtitle }}
-      <p class="hero-subtitle">{{ . }}</p>
-    {{ end }}
+    <h1 class="hero-title">
+      Szalagparketta lerakás
+    </h1>
+
+    <p class="hero-subtitle">
+      Precíz kivitelezés Piliscsabán és környékén
+    </p>
 
     <a href="/kapcsolat/" class="btn-hero">
       Ajánlatot kérek
     </a>
+
   </div>
 </section>
 
